[package]
name = "zero-to-production"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "./src/lib.rs"

[[bin]]
path = "./bin/main.rs"
name = "zero_to_production"

[dependencies]
actix-web = "4.0.0-beta.8"
actix-http = "3.0.0-beta.10"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
